--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prepare": "husky install",
     "commit": "cz",
     "release": "standard-version",
-    "format": "./scripts/format.sh"
+    "format": "./scripts/format.sh",
+    "test": "./scripts/test.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
