--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.4",
+    "prettier-plugin-sh": "^0.13.1",
     "standard-version": "^9.5.0"
   },
   "config": {
@@ -26,6 +27,6 @@
     }
   },
   "lint-staged": {
-    "*": "./scripts/format.sh"
+    "*.{js,md,json,sh}": "./scripts/format.sh"
   }
 }
