--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
   },
   "lint-staged": {
     "*.{js,md,json,sh}": "./scripts/format.sh"
+  },
+  "volta": {
+    "node": "22.13.1",
+    "npm": "11.0.0"
   }
 }
