--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,12 +23,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.13.1'
+          node-version: '20.x'
           cache: 'npm'
 
       - name: Install Dependencies
         run: |
-          npm ci
+          npm install
           cd apps/medtingpot_core
           mix local.hex --force
           mix local.rebar --force
