--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: '1.18.1'
+          elixir-version: '1.15.7'
           otp-version: '26.0'
 
       - name: Set up Node.js
@@ -30,6 +30,7 @@ jobs:
         run: |
           npm install
           cd apps/medtingpot_core
+          mkdir -p priv/repo/migrations
           mix local.hex --force
           mix local.rebar --force
           mix deps.get
